--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -5,12 +5,15 @@ body
   -moz-osx-font-smoothing: grayscale
 
 .page-header
-  min-height: 528px
+  min-height: 376px
   background: #1F2633
   color: $color_white
   padding: 0 152px 0 152px
   background: url('images/header-bg.png') center no-repeat
   background-size: cover
+  
+  &--home
+    min-height: 528px
 
 .page-header__logo
   padding-top: 16px
@@ -142,10 +145,6 @@ body
     bottom: 0
     background: #fc5245
 
-.section__title--top-offers
-  max-height: 128px
-  width: 357px
-
 .wrapper
   padding: 48px 152px 0 112px
 
@@ -267,13 +266,16 @@ body
 
 .section-top-offers__call
   position: absolute
-  top: -100px
+  top: 0
   right: 0
   padding: 32px
   background: #ffffff
   box-shadow: 0 10px 24px 0 rgba(15,71,77,0.16)
   border-radius: 6px
   z-index: 5
+  
+  &--home
+    top: -100px
 
 .section-top-offers__button
   font-size: 12px
