fixed primary text styles

--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -149,7 +149,6 @@ body
   padding: 48px 152px 0 112px
 
 .primary-text
-  max-width: 714px
   font-size: 18px
   line-height: 32px
   color: #787B80
@@ -166,6 +165,9 @@ body
     top: 0
     background: #fc5245
     font-weight: 700
+  
+.primary-text--limited
+  max-width: 714px
 
 .section__sub-title
   position: relative
