--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -2,5 +2,6 @@
 @import "fonts.css"
 @import "resset-v2.css"
 @import "_variable.styl"
+@import "_mixins.styl"
 @import "_style.styl"
 @import "_media.styl"
