--- a/src/styl/resset-v2.css
+++ b/src/styl/resset-v2.css
@@ -35,3 +35,13 @@ li {
 .clearfix:after {
     clear: both;
 }
+fieldset {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  min-width: 0;
+}
+input:focus
+{
+  outline:0;
+}
