--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -8,8 +8,15 @@
   .page-header__top
     margin-bottom: 48px
 
+  .page-header__text
+    margin-bottom: 74px
+
   .main-nav__item
     margin-right: 16px
+
+  .search-form
+    padding-left: 0
+    padding-right: 0
 
   .wrapper
     padding: 48px 24px 0 24px
@@ -44,7 +51,7 @@
 
   .section__comments-img
     left: -457px
-    bottom: -88px
+    bottom: -104px
 
   .section__stats-img-support
     width: 245px
@@ -80,6 +87,24 @@
     order: 5
     margin-top: 14px
 
+  .popup-free
+    width: 943px
+    padding: 32px 32px 64px 32px
+    background: linear-gradient(to top, #202432 0%, #202432 100%) top no-repeat,linear-gradient(to top, #ffffff 0%, #ffffff 100%) bottom no-repeat
+    background-size: 100% 228px, 100% 335px
+    .popup-form
+      padding-left: 34px
+
+  .popup-thank-you
+    width: 944px
+    height: 356px
+
+    .popup__btn-container
+      padding-left: 34px
+
+  .primary-text--popup-tnx
+    width: 318px
+
 @media (max-width: 1023px)
   .page-header
     padding: 0
@@ -94,6 +119,7 @@
     font-size: 18px
     line-height: 24px
     padding: 0 36px
+    margin-bottom: 24px
 
   .page-header__toggle-btn
     display: block
@@ -146,6 +172,7 @@
     width: 100%
     padding-bottom: 295px
     background: #2d3539
+    z-index: 5
     & + main-title
       margin-bottom: 100px
 
@@ -198,7 +225,7 @@
       margin-top: 32px
 
   .section--top-offers
-    margin-bttom: 64px
+    margin-bottom: 64px
 
   .section__comments-img
     width: 352px
@@ -271,7 +298,7 @@
       width: 213px
       height: 247px
       background: url('images/support-768.png') center no-repeat
-      background-size: size
+      background-size: cover
 
   .primary-text--stats-limited
     width: 408px
@@ -300,7 +327,171 @@
   .page-footer__nav
     margin-right: 18px
 
+  .search-form
+    padding-left: 24px
+    padding-right: 24px
+    form
+      flex-wrap: wrap
+
+  .search-form__btn-container
+    order: 0
+    margin-top: 0
+    margin-bottom: 16px
+
+  .search-form__wrapper--from
+    width: 50%
+    margin-bottom: 16px
+
+  .search-form__wrapper--to
+    width: 50%
+
+  .search-form__wrapper--date
+    width: 50%
+    margin-bottom: 16px
+
+  .search-form__wrapper--quantity
+    width: 20%
+
+  .search-form__wrapper--class
+    width: 30%
+
+  .search-form__wrapper--sumbit
+    width: 100%
+
+  .popup-free
+    width: 720px
+    height: 631px
+    padding: 34px 24px 32px 16px
+    background-size: 100% 232px, 100% 399px
+
+    .popup-form
+      flex-wrap: wrap
+
+    .popup__name-wrapper
+      width: 50%
+      margin-bottom: 16px
+
+    .popup__email-wrapper
+      width: 50%
+      input
+        border-right: 1px solid #dbdbdb
+
+    .popup__phone-wrapper
+      width: 100%
+
+  .section__title--popup
+    font-size: 48px
+    line-height: 64px
+    padding-bottom: 14px
+    &:before
+      top: 20px
+
+    &:after
+      height: calc(100% - 40px)
+
+  .primary-text--popup
+    padding-bottom: 24px
+
+  .section__sub-title--popup
+    font-size: 20px
+    line-height: 24px
+
+  .popup-fast
+    width: 720px
+    padding: 34px 16px 64px 16px
+    background-size: 100% 168px, 100% 284px
+
+    .primary-text--popup
+      padding-bottom: 32px
+
+    .popup__select
+      right: -40px
+
+  .popup-thank-you
+    width: 720px
+    height: 488px
+    padding: 64px 24px 64px 16px
+
+    .popup__btn-container
+      padding-left: 29px
+
+  .section__title--popup-tnx
+    font-size: 48px
+    line-height: 64px
+
+  .primary-text--popup-tnx
+    width: 640px
+    line-height: 28px
+    padding-bottom: 184px
+
+  .popup__call
+    position: absolute
+    top: 224px
+    left: 44px
+    width: 626px
+    padding: 24px
+    box-sizing: border-box
+    text-align: center
+
+  .popup__call-text
+    margin-bottom: 16px
+    br
+      display: none
+
+@media (min-width: 767px)
+  .section__comments
+    position: relative
+
 @media (max-width: 767px)
+  .wrapper
+    padding: 32px 16px 0 16px
+
+  .top-offers-link__upper
+    height: 240px
+
+  .section__btn-container--top-offers
+    flex-direction: column
+    &:before
+      display: none
+
+    &:after
+      display: none
+
+  .section__btn-see
+    text-align: center
+    margin-right: 0
+    margin-bottom: 16px
+
+  .section__btn-quote
+    text-align: center
+
+  .page-header__callback--mobile-visible
+    display: block
+    position: static
+
+  .section__title
+    width: 100%
+    padding-left: 0
+    padding-bottom: 16px
+    &:before,
+    &:after,
+    br
+      display: none
+
+  .primary-text
+    width: 100%
+    padding-left: 0
+    &:before
+      display: none
+
+  .section__sub-title
+    padding-left: 0
+    &:before
+      display: none
+
+    &:after
+      display: none
+
   .main-title
     font-size: 28px
     line-height: 32px
@@ -308,6 +499,7 @@
   .page-header__text
     font-size: 16px
     line-height: 24px
+    margin-bottom: 16px
 
   .page-header__callback
     display: none
@@ -325,11 +517,134 @@
     top: 16px
 
   .page-header__callback-close
-    display: block
     position: absolute
 
+  .section--top-offers
+    padding-bottom: 280px
+    margin-bottom: 48px
+
   .section-top-offers__call
+    padding: 16px 16px 24px 16px
+    bottom: 0
+    right: 50%
+    transform :translateX(50%)
+    top: auto
+
+  .section-top-offers__call-text
+    margin-bottom: 16px
+
+  .section__compare-table-container
+    margin-left: 0
+    position: relative
+    right: 16px
+
+  .column-cell
+    height: 52px
+    padding: 10px 15px
+    box-sizing: border-box
+
+  .column--first
+    width: 48%
+
+    .column-head
+      padding: 16px 15px
+
+  .column--second
+    width: 52%
+
+    .column-cell
+      padding: 10px 15px
+
+    .column-head
+      padding: 34px 15px
+      img
+        width: 122px
+        height: 14px
+
+  .column--third
+    font-size: 0
+    width: 3%
+    .column-cell
+      height: 52px
+      font-size: 0
+      border-right: none
+
+    .column-head
+      height: 66px
+      font-size: 0
+      padding: 10px 15px
+      border-right: none
+
+  .column--fourth
     display: none
+
+  .section__btn-container--compare
+    padding-left: 0
+    .section__btn-see
+      margin-bottom: 0
+
+  .section--compare
+    margin-bottom: 16px
+
+  .section--clients
+    margin-top: 265px
+    margin-bottom: 0
+    padding: 32px 16px
+
+  .section__comments-text
+    width: 100%
+    margin: 8px 0 16px 0
+
+  .section__comments-img
+    width: 226px
+    height: 246px
+    top: -246px
+    left: 50%
+    transform: translateX(-50%)
+
+  .slider-controls
+    margin-left: 0
+
+  .section--stats
+    margin-bottom: 48px
+
+  .section__title--stats
+    br
+      display: none
+
+  .section__sub-title--stats
+    margin-top: 16px
+    margin-bottom: 23px
+
+  .section__stats-list
+    padding-left: 0
+    flex-direction: column
+
+  .section__stats-item
+    width: 100%
+    margin-right: 0
+    padding-top: 32px
+    padding-bottom: 32px
+    margin-bottom: 16px
+
+  .section__stats-item:first-child
+    position: relative
+    padding-top: 277px
+    &:before
+      content: ''
+      position: absolute
+      width: 239px
+      height: 245px
+      top: 0
+      left: 50%
+      transform: translateX(-50%)
+      background: url('images/support-320.png') center no-repeat
+      background-size: cover
+
+  .section__stats-item:nth-child(3)
+    margin-bottom: 0
+    &:before
+      display: none
 
   .page-header__logo
     margin-left: auto
@@ -354,6 +669,30 @@
   .page-header__callback-num
     margin-right: 18px
 
+  .search-form__btn-container
+    margin-top: 16px
+
+  .search-form__wrapper--from
+    width: 100%
+    margin-bottom: 8px
+
+  .search-form__wrapper--to
+    width: 100%
+    margin-bottom: 8px
+
+  .search-form__wrapper--date
+    width: 100%
+    margin-bottom: 8px
+
+  .search-form__wrapper--quantity
+    width: 30%
+
+  .search-form__wrapper--class
+    width: 70%
+
+  .search-form__wrapper--sumbit
+    width: 100%
+
   .page-header__top--opened
     padding-bottom: 360px
 
@@ -371,12 +710,206 @@
       padding-bottom: 16px
       background: #3e434a
       border-top: 1px solid #5c606d
+      box-sizing: border-box
 
     .page-header__callback-toggle
       display: none
 
+  .page-footer
+    padding: 32px 16px 24px 16px
 
+  .section__btn-container--footer
+    flex-direction: column
 
+    .section__btn-see
+      margin-right: 0
 
+  .section__btn-quote--white
+    color: #2d2933
+    background: #ffffff
+    border: none
+    padding-top: 12px
+    padding-bottom: 12px
+
+  .section__btn-container--footer
+    margin-bottom: 32px
+
+  .page-footer__nav
+    width: 100%
+    margin-right: 0
+    margin-bottom: 16px
+
+  .page-footer__nav-list
+    flex-direction: column
+    flex-wrap: wrap
+    max-height: 64px
+
+  .page-footer__nav-item
+    width: 50%
+    margin-right: 0
+
+  .page-footer__call
+    margin-right: 0
+
+  .page-footer__cards
+    flex-wrap: wrap
+    margin-top: 24px
+    justify-content: space-between
+
+  .page-footer__cards-text
+    width: 100%
+    margin-right: 0
+    margin-bottom: 9px
+
+  .page-footer__links
+    padding-bottom: 14px
+
+  .page-footer__text
+    width: 100%
+
+  .page-header__top--callback
+    position: absolute
+    width: 100%
+    padding-bottom: 430px
+    background: #2d3539
+    z-index: 5
+
+    .page-header__toggle-btn
+      visibility: hidden
+
+  .page-header__callback-container--opened
+    .page-header__callback-toggle
+      visibility: hidden
+
+    .page-header__callback-close
+      display: block
+      top: 16px
+      right: 16px
+
+    .page-header__callback
+      display: block
+      position: absolute
+      top: 40px
+      left: 50%
+      transform: translateX(-50%)
+
+    .page-header__fast-quote
+      display: block
+      position: absolute
+      width: 100%
+      bottom: 0
+      left: 0
+
+    .page-header__callback-button
+      display: none
+
+    .page-header__callback-num
+      padding: 12px 60px
+      margin-right: 0
+      border: 2px solid #50cfe3
+      border-radius: 30px
+      text-align: center
+
+    .page-header__callback-lower
+      font-size: 24px
+      line-height: 16px
+
+  .popup__phone-wrapper--quote
+    width: 100%
+    box-sizing: border-box
+
+  .popup-free
+    width: 288px
+    height: 808px
+    padding: 24px 16px 32px 16px
+    background-size: 100% 312px, 100% 496px
+
+    .popup__name-wrapper
+      width: 100%
+      margin-bottom: 16px
+      input
+        border-right: 1px solid #dbdbdb
+
+    .popup__email-wrapper
+      width: 100%
+      margin-bottom: 16px
+
+    .popup__phone-wrapper
+      width: 100%
+
+  .section__title--popup
+    font-size: 28px
+    line-height: 32px
+
+  .primary-text--popup
+    font-size: 14px
+
+  .section__sub-title
+    font-size: 16px
+    line-height: 24px
+    padding-top: 24px
+    margin-bottom: 16px
+
+  .popup__close
+    width: 16px
+    height: 16px
+    top: 8px
+    right: 8px
+    background: url('images/popup-close-mob.svg')
+
+  .popup-free__privacy-text
+    margin-left: 0
+
+  .popup-fast
+    width: 288px
+    height: 395px
+    padding: 24px 16px
+
+    .primary-text--popup
+      padding-bottom: 16px
+
+    .popup__select
+      right: 16px
+
+    .popup__phone-wrapper
+      width: 100%
+
+    input[type="tel"]
+      width: 100%
+
+  .popup-thank-you
+    width: 288px
+    height: 395px
+    padding: 24px 16px
+
+    .popup__btn-container
+      padding-left: 0
+      text-align: center
+
+  .section__title--popup-tnx
+    font-size: 28px
+    line-height: 32px
+    padding-bottom: 19px
+
+  .popup__call
+    width: 256px
+    left: 16px
+    top: 161px
+
+  .popup__call-num
+    font-size: 28px
+    line-height: 32px
+
+  .popup__btn-close
+    &:before
+      display: none
+
+    &:after
+      display: none
+
+  .primary-text--popup-tnx
+    font-size: 14px
+    line-height: 24px
+    padding-bottom: 174px
 
 
