--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -584,6 +584,11 @@ body
   width: 440px
   height: 599px
 
+.section__slide-item--second,
+.section__slide-item--third
+  .section__comments-img
+    bottom: -50px
+
 .section__sub-title--clients
   margin-bottom: 0
   font-size: 16px
@@ -625,7 +630,7 @@ body
   margin-left: 16px
   cursor: pointer
 
-.slider__circle
+.slide__pointer
   display: inline-block
   position: relative
   top: 3px
@@ -636,7 +641,7 @@ body
   opacity: 0.7
   cursor: pointer
 
-.slider__circle--3
+.slide__pointer--3
   margin-right: 0
 
 .section--stats
@@ -896,13 +901,11 @@ body
     box-sizing: border-box
     margin: 0
     border: 1px solid #dbdbdb
-    border-right: none
     box-shadow: inset 0 1px 4px 0 rgba(191,184,176,0.33)
 
   input[type="tel"]
     width: 100%
     padding-right: 34px
-    border-right: 1px solid #dbdbdb
 
 input:focus
   outline: none
@@ -1123,7 +1126,6 @@ input:focus
     box-sizing: border-box
     margin: 0
     border: 1px solid #dbdbdb
-    border-right: none
     box-shadow: inset 0 1px 4px 0 rgba(191,184,176,0.33)
 
   .search-form__label
@@ -1268,6 +1270,20 @@ input:focus
 .popup__btn-quote
   &:hover
     box-shadow: 0 1px 11px 0 rgba(241,68,55,0.51)
+
+.section__btn-quote
+  &:hover
+    box-shadow: 0 1px 11px 0 rgba(36,121,188,0.51)
+
+
+.section__btn-quote--white
+  border: none
+  color: #2d2833
+  background: #ffffff
+  padding: 12px 47px
+  &:hover
+    box-shadow: 0 1px 11px 0 rgba(255,255,255,0.51)
+    color: #2d2833
 
 .input-warning
   &:before
