--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -532,9 +532,11 @@
     margin-bottom: 16px
 
   .section__compare-table-container
+    width: 320px
     margin-left: 0
     position: relative
     right: 16px
+    overflow-x: scroll
 
   .column-cell
     height: 52px
@@ -548,33 +550,31 @@
       padding: 16px 15px
 
   .column--second
-    width: 52%
+    width: 45%
 
     .column-cell
       padding: 10px 15px
 
     .column-head
-      padding: 34px 15px
+      padding: 34px 10px
       img
         width: 122px
         height: 14px
 
   .column--third
-    font-size: 0
-    width: 3%
+    width: 50%
     .column-cell
       height: 52px
-      font-size: 0
-      border-right: none
 
     .column-head
       height: 66px
-      font-size: 0
-      padding: 10px 15px
-      border-right: none
+      padding: 22px 15px 10px 15px
 
   .column--fourth
-    display: none
+    width: 50%
+    .column-head
+      height: 66px
+      padding-top: 20px
 
   .section__btn-container--compare
     padding-left: 0
