--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -1,3 +1,9 @@
+@media (min-width: 1440px)
+  .section__slide-item--second,
+  .section__slide-item--third
+    .section__comments-img
+      bottom: -98px
+
 @media (max-width: 1439px)
   .page-header
     padding: 0 40px 0 40px
@@ -104,6 +110,12 @@
 
   .primary-text--popup-tnx
     width: 318px
+
+@media (min-width: 1023px) and (max-width: 1439px)
+  .section__slide-item--second,
+  .section__slide-item--third
+    .section__comments-img
+      bottom: -80px
 
 @media (max-width: 1023px)
   .page-header
@@ -532,7 +544,7 @@
     margin-bottom: 16px
 
   .section__compare-table-container
-    width: 320px
+    width: 288px
     margin-left: 0
     position: relative
     right: 16px
@@ -556,7 +568,7 @@
       padding: 10px 15px
 
     .column-head
-      padding: 34px 10px
+      padding: 34px 4px
       img
         width: 122px
         height: 14px
